[modify] similar products visible and filters fixed

--- a/app/assets/stylesheets/AdminLTE.css
+++ b/app/assets/stylesheets/AdminLTE.css
@@ -93,6 +93,17 @@ body {
     transform: translate(230px, 0);
   }
 }
+@media (max-width:800px) {
+  .thumbnail {
+    font-size: 10px;
+    height: 150px;
+  }
+}
+@media (min-width:800px) {
+  .thumbnail {
+    height: 220px;
+  }
+}
 .content-wrapper,
 .right-side {
   min-height: 100%;
